@@ -1,9 +1,13 @@
-#--------------------------------------------------------------------------------------------------------------
-# Show about box
-#--------------------------------------------------------------------------------------------------------------
+package about;
+require Exporter;
+@ISA = qw(Exporter);
 
 use strict;
 use warnings;
+
+#--------------------------------------------------------------------------------------------------------------
+# Show about box
+#--------------------------------------------------------------------------------------------------------------
 
 sub show_about
 {
