@@ -1,15 +1,0 @@
-#--------------------------------------------------------------------------------------------------------------
-# Show Changelog
-#--------------------------------------------------------------------------------------------------------------
-
-use strict;
-use warnings;
-
-sub show_changelog
-{
-	my $text = join("", &misc::readf($main::changelog));
-
-	&show_dialog("Changelog", $text);
-}
-
-1;
