@@ -1,14 +1,0 @@
-#--------------------------------------------------------------------------------------------------------------
-# Show Thanks
-#--------------------------------------------------------------------------------------------------------------
-
-use strict;
-use warnings;
-
-sub show_thanks
-{
-	my $text = join("", &misc::readf($main::thanks));
-	&show_dialog("Thanks", $text);
-}
-
-1;
